<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:minWidth="200dp" 
    android:minHeight="140dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_menu_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/latitude"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/latitude_m"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/longitude_m"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_precision1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_precision" />
    
    <SeekBar
        android:id="@+id/precision"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:max="1000000"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />
    
    <TextView
        android:id="@+id/label_precision2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_precision2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp" >
        
        <Button
            android:id="@+id/confirm_search"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_gps" />

        <Button
            android:id="@+id/undo_request"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="106dp"
            android:layout_marginTop="20dp"
            android:text="@string/undo_request" />

    </LinearLayout>

</LinearLayout>