<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSettings"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >
        
	<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2Settings"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        <Spinner
            android:id="@+id/groups"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
                    
	        <Button
    	        android:id="@+id/btn_confirm"
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/confirmGroupButtonSettings" />
            
            
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    </LinearLayout>

</LinearLayout>