<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:minWidth="250dp" 
    android:minHeight="140dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_menu_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/name_to_search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="45"
            android:ems="10"
            android:hint="@string/name"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp" >
        
        <Button
            android:id="@+id/confirm_search_by_name"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_search_by_name" />

        <Button
            android:id="@+id/undo_request_by_name"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="106dp"
            android:layout_marginTop="20dp"
            android:text="@string/undo_request" />

    </LinearLayout>

</LinearLayout>